@@ -18,6 +18,9 @@ New features
 * PR#202: Allow "." and "~" prefixed references in ``:param:`` doc fields
   for Python.
 
+* PR#184: Add :confval:`autodoc_mock_imports`, allowing to mock imports of
+  external modules that need not be present when autodocumenting.
+
 * #925: Allow list-typed config values to be provided on the command line,
   like ``-D key=val1,val2``.
 
